# gtest_gmock_demo

./: CMakeLists.txt
Google_tests/: AbsoluteDateTest.cpp  CMakeLists.txt
gmock_test/: CMakeLists.txt  FooInterface.h  FooMain.cpp  FooMock.h
